<resources>
    <!-- Main Activity -->
    <string name="app_name">MP_20203125</string>
    <string name="login_name">LOGIN</string>
    <string name="ID_input">ID</string>
    <string name="PW_input">PW</string>
    <string name="loginBtn">로그인</string>
    <string name="signUpBtn">회원가입</string>
    <string name="guestLogin">게스트로 로그인</string>


    <!-- Second Activity -->
    <string name="SignUp_title">계정 생성하기</string>
    <string name="ID_txt">아이디</string>
    <string name="checkID">중복 확인</string>
    <string name="PW_txt">비밀번호</string>
    <string name="checkPW">비밀번호가 올바르지 않습니다.</string>

    <string name="name_txt">이름</string>
    <string name="name_input">Name</string>
    <string name="phone_txt">전화번호</string>
    <string name="phoneNum_input">Without hyphen(-)</string>
    <string name="address_txt">주소</string>
    <string name="address_input">Address</string>
    <string name="agreement_txt">개인정보동의 약관</string>
    <string name="agreement_content">
        맞춤형 서비스를 위한 개인정보 수집 및 이용 약관에 동의하십니까?
    </string>
    <string name="agree">동의</string>
    <string name="disagree">비동의</string>>
    <string name="save">저장</string>

    <!-- Third Activity -->
    <string name="list_txt">상품 목록</string>
    <string name="item1">상품 1</string>
    <string name="item2">상품 2</string>
    <string name="item3">상품 3</string>
    <string name="item4">상품 4</string>
    <string name="item5">상품 5</string>
    <string name="item6">상품 6</string>
    <string name="item7">상품 7</string>
    <string name="addItem">상품 등록하기</string>
    <string name="delItem">상품 삭제하기</string>
    <string name="profile">회원 정보</string>

    <!-- Add Item Activity -->
    <string name="item_name">상품 이름</string>
    <string name="OK">확인</string>
    <string name="cancel">취소</string>

</resources>