<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/ID_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID_txt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ID_input"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:hint="@string/ID_input"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/checkID"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:text="@string/checkID" />
    </LinearLayout>

    <TextView
        android:id="@+id/PW_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PW_txt" />

    <EditText
        android:id="@+id/PW_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PW_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/checkPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="22dp"
        android:gravity="end"
        android:text="@string/checkPW"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_txt" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/name_input"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/phone_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_txt"
        android:textColor="#757575" />

    <EditText
        android:id="@+id/phoneNum_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/phoneNum_input"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/address_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_txt" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/address_input"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/agreement_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement_txt" />

    <TextView
        android:id="@+id/agreement_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/agreement_content" />

    <CheckBox
        android:id="@+id/agreeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="55dp"
        android:minHeight="48dp"
        android:text="@string/save" />

</LinearLayout>