<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:text="@string/login_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ID_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="194dp"
        android:hint="@string/ID_input"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="262dp"
        android:ems="10"
        android:hint="@string/PW_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="107dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/loginBtn" />

        <Button
            android:id="@+id/SignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtn" />

        <Button
            android:id="@+id/withoutLoginBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/guestLogin"
            android:textColor="#878686" />

    </LinearLayout>

</RelativeLayout>