<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/list_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:text="@string/list_txt" />


    <ListView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_row="1"
        android:layout_rowWeight="13"
        android:layout_column="0"
        android:choiceMode="singleChoice"
        />

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="0dp"
        android:layout_row="2"
        android:layout_rowWeight="2"
        android:layout_column="0"
        android:gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addItemBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/addItem" />

        <Button
            android:id="@+id/delItemBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delItem" />
    </LinearLayout>

    <Button
        android:id="@+id/profileBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_row="3"
        android:layout_rowWeight="1.5"
        android:layout_column="0"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="#757575"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

</GridLayout>